EXEC_PROGRAM("find ${CMAKE_SOURCE_DIR}/src/lib/robot -name *\\.cpp -or -name *\\.h" OUTPUT_VARIABLE ROBOT_SRCS_ORIG )
STRING(REPLACE "\n" ";" ROBOT_SRCS ${ROBOT_SRCS_ORIG})

INCLUDE_DIRECTORIES(../
  ${Boost_INCLUDE_DIRS}
)

ADD_LIBRARY( robot STATIC ${ROBOT_SRCS}  )

ADD_DEFINITIONS(-DWITH_GUI)
ADD_LIBRARY( robot_gui STATIC ${ROBOT_SRCS}  )
